MyCloudCode/src/less/cards.less
.deal-card,
.order-card {
  padding-top: 2rem;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-bottom: 1px;
  box-shadow: -1px -3px 3px #888888;
  background:white;
  border-radius:3px;
  margin-bottom: 5px;
  cursor: pointer;
  overflow: hidden;
  white-space:nowrap;
  // ellipsis doesn't work for some reason ...
  text-overflow: ellipsis;
}

.deal-detail-box-shadow {
  margin: 0 1em;
  box-shadow: -1px -3px 3px #888888;
  background:white;
  border-radius:1px;
}

